# sl_win_build

./: .gitignore  CMakeLists.txt  README.md  build_erutaso.cmd  build_pyonpyon.cmd  build_sl.cmd  download.cmd  get_vs_env.cmd
.github/workflows/: build.yml
